--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "dependencies": {
-    "@prisma/client": "^5.19.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.21.0",
-    "express-validator": "^7.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "prisma": "^5.19.1"
-  }
+	"dependencies": {
+		"@prisma/client": "^5.19.1",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.20.3",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"ejs": "^3.1.10",
+		"express": "^4.21.0",
+		"express-validator": "^7.2.0",
+		"jsonwebtoken": "^9.0.2",
+		"passport": "^0.7.0",
+		"passport-jwt": "^4.0.1",
+		"prisma": "^5.19.1"
+	},
+	"name": "odin-blog-api",
+	"version": "1.0.0",
+	"description": "API backend for blog api project as part of odin project curriculum",
+	"main": "app.js",
+	"devDependencies": {},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "node --watch --env-file=.env app.js "
+	},
+	"author": "",
+	"license": "ISC"
 }
